--- a/css/style.css
+++ b/css/style.css
@@ -2653,9 +2653,14 @@ li:not(.d-flex) .icon-check-empgrnd{
         margin: 0 auto; /* Centra los íconos */
         right: -8px;
     }
+    .honestidad-icon{
+        width: 100px; /* Reduce el tamaño de los íconos */
+        margin: 0 auto; /* Centra los íconos */
+        right: -23px;
+    }
     .responsabilidad-icon {
         position: relative; /* Permite ajustar la posición del icono */
-        right: -55px; /* Ajusta la posición horizontal del icono */
+        right: -64px; /* Ajusta la posición horizontal del icono */
     }
 
     /* Ajuste específico para japonés en responsabilidad-icon */
